--- a/views/admin.ejs
+++ b/views/admin.ejs
@@ -27,6 +27,7 @@
         <table class="table table-bordered">
             <thead class="thead-dark">
                 <tr>
+                    <th>SI</th>
                     <th>ID</th>
                     <th>Name</th>
                     <th>Email</th>
@@ -36,8 +37,9 @@
             </thead>
             <tbody>
                 <% if(typeof users!='undfined'&& users.length>0){ %>
-                <% users.forEach((element) => { %>
+                <% users.forEach((element,index) => { %>
                     <tr>
+                    <td><%=index+1 %> </td>
                     <td><%=element._id %> </td>
                     <td><%=element.name %></td>
                     <td><%=element.email %></td>
